
    HIVE-639. create contrib directory (Zheng Shao via namit)

    HIVE-674. add UDFs sin, cos, asin, acos (Karan Mangla via namit)

    HIVE-668. add UDFs abs, ascii, repeat, lpad, rpad, space, substring (Emil Ibrishimov via namit)

    HIVE-167. add regex serde(Zheng Shao via namit)

    HIVE-665. Get hadoop/mapreduce cluster status from hive server
    (Eric Hwang via rmurthy)

  IMPROVEMENTS
    HIVE-389. Option to build without ivy (jssarma)

    HIVE-360. Generalize the FileFormat Interface in Hive.
    (He Yongqiang via zshao)

    HIVE-406. Build file improvements. (Joydeep Sen Sarma via zshao).

    HIVE-254. Link jobtracker from Hive History in Hive Web Interface.
    (Edward Capriolo via athusoo)

    HIVE-502. Optimize RCFile's performance by removeing all synchronized
    modifiers. (Yongqiang He via zshao)

    HIVE-204. Provide option to run tests with MiniMRCluster.
    (Namit Jain via athusoo)

    HIVE-511. Make DoubleWritable's hashCode more uniform.
    (Zheng Shao via rmurthy)

    HIVE-490. Add missing configuration variables to hive-default.xml.
    (Yongqiang He via zshao)

    HIVE-528. Map Join followup: split MapJoinObject into MapJoinObjectKey and
    MapJoinObjectValue. (Namit Jain via zshao)

    HIVE-542. UDF: Faster String Like. (Yuntao Jia via zshao)

    HIVE-521. Move size, if, isnull, isnotnull to GenericUDF.
    (Min Zhou via zshao)

    HIVE-439. Merge small files after a map-only job. (Namit Jain via zshao)

    HIVE-516. Enable predicate pushdown for junit tests.
    (Prasad Chakka via zshao)

    HIVE-530. Map Join followup: optimize number of map-reduce jobs.
    (Namit Jain via zshao)

    HIVE-445. Upgrade JPOX to datanuclues plugins. (Prasad Chakka via zshao)

    HIVE-593. UDF and GenericUDF clean-up. (Zheng Shao via pchakka)

    HIVE-605. Change eclipse classpath for datanuclues.
    (Prasad Chakka via zshao)

    HIVE-461. Optimize RCFile reading by using column pruning results.
    (Yongqiang He via zshao)
