@@ -92,6 +92,7 @@ TOK_ALTERTABLE_SERIALIZER;
 TOK_ALTERTABLE_PROPERTIES;
 TOK_MSCK;
 TOK_SHOWTABLES;
+TOK_SHOWFUNCTIONS;
 TOK_SHOWPARTITIONS;
 TOK_DROPTABLE;
 TOK_TABCOLLIST;
@@ -302,6 +303,7 @@ showStatement
 @init { msgs.push("show statement"); }
 @after { msgs.pop(); }
     : KW_SHOW KW_TABLES showStmtIdentifier?  -> ^(TOK_SHOWTABLES showStmtIdentifier?)
+    | KW_SHOW KW_FUNCTIONS showStmtIdentifier?  -> ^(TOK_SHOWFUNCTIONS showStmtIdentifier?)
     | KW_SHOW KW_PARTITIONS Identifier -> ^(TOK_SHOWPARTITIONS Identifier)
     ;
     
@@ -1141,6 +1143,7 @@ KW_PARTITION : 'PARTITION';
 KW_PARTITIONS : 'PARTITIONS';
 KW_TABLE: 'TABLE';
 KW_TABLES: 'TABLES';
+KW_FUNCTIONS: 'FUNCTIONS';
 KW_SHOW: 'SHOW';
 KW_MSCK: 'MSCK';
 KW_DIRECTORY: 'DIRECTORY';
