@@ -1,0 +1,11 @@
+SHOW FUNCTIONS;
+
+SHOW FUNCTIONS '^c.*';
+
+SHOW FUNCTIONS '.*e$';
+
+SHOW FUNCTIONS 'log.*';
+
+SHOW FUNCTIONS '.*date.*';
+
+SHOW FUNCTIONS '***';
