@@ -1,0 +1,145 @@
+query: SHOW FUNCTIONS
+!
+%
+&
+&&
+*
++
+-
+/
+<
+<=
+<>
+=
+==
+>
+>=
+^
+abs
+acos
+and
+ascii
+asin
+avg
+bigint
+bin
+boolean
+case
+ceil
+ceiling
+coalesce
+concat
+conv
+cos
+count
+date_add
+date_sub
+datediff
+day
+dayofmonth
+double
+elt
+exp
+float
+floor
+from_unixtime
+get_json_object
+hash
+hex
+if
+index
+instr
+int
+isnotnull
+isnull
+lcase
+length
+like
+ln
+locate
+log
+log10
+log2
+lower
+lpad
+ltrim
+max
+min
+month
+negative
+not
+or
+parse_url
+positive
+pow
+power
+rand
+regexp
+regexp_extract
+regexp_replace
+repeat
+reverse
+rlike
+round
+rpad
+rtrim
+sin
+size
+smallint
+space
+split
+sqrt
+string
+substr
+substring
+sum
+test_max
+test_translate
+tinyint
+to_date
+trim
+ucase
+unix_timestamp
+upper
+when
+year
+|
+||
+~
+query: SHOW FUNCTIONS '^c.*'
+case
+ceil
+ceiling
+coalesce
+concat
+conv
+cos
+count
+query: SHOW FUNCTIONS '.*e$'
+case
+coalesce
+double
+from_unixtime
+lcase
+like
+locate
+negative
+positive
+regexp_replace
+reverse
+rlike
+size
+space
+test_translate
+to_date
+ucase
+query: SHOW FUNCTIONS 'log.*'
+log
+log10
+log2
+query: SHOW FUNCTIONS '.*date.*'
+date_add
+date_sub
+datediff
+to_date
+query: SHOW FUNCTIONS '***'
